--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">CleanArchitectureStudy</string>
 
     <string name="activity_main_hint_input">영화 이름을 입력하세요.</string>
+    <string name="tab_search_list">검색하기</string>
+    <string name="tab_save_list">저장목록</string>
+    <string name="already_exist">이미 저장된 항목입니다.</string>
+    <string name="save_success">저장되었습니다.</string>
+    <string name="delete_success">삭제되었습니다.</string>
 </resources>
