--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="already_exist">이미 저장된 항목입니다.</string>
     <string name="save_success">저장되었습니다.</string>
     <string name="delete_success">삭제되었습니다.</string>
+    <string name="delete_success">삭제되었습니다.</string>
 </resources>
